--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <p><span style="color:black">PHARRELLWILLIAMS.COM</span></p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt=
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
