--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Smiley face">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <p><span style="color:black">PHARRELLWILLIAMS.COM</span></p>
+        <p><span style="color:black">COLUMBIARECORDS.COM</span></p>
+        
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="HAPPY">
       </div>
     </div>
   </body>
